  clock_getcpuclockid, clock_nanosleep were removed from the librt library
  for new applications (on architectures which had them).  Instead, the
  definitions in libc will be used automatically, which have been available
  since glibc 2.17.

* The obsolete and never-implemented XSI STREAMS header files <stropts.h>
  and <sys/stropts.h> have been removed.

* The typedefs u_int8_t, u_int16_t, u_int32_t, u_int64_t, and register_t
  are no longer defined by <sys/types.h> in strict conformance modes.
  These types were historically provided by <sys/types.h> on BSD systems,
  but are not part of the POSIX specification for that header.  Applications
  requiring fixed-width unsigned integer types should use the similarly
  named uint8_t, uint16_t, etc. from <stdint.h>.  There is no standardized
  replacement for register_t.

* Support for the "inet6" option in /etc/resolv.conf and the RES_USE_INET6
  resolver flag (deprecated in glibc 2.25) have been removed.

* The obsolete RES_INSECURE1 and RES_INSECURE2 option flags for the DNS stub
  resolver have been removed from <resolv.h>.

* With --enable-bind-now, installed programs are now linked with the
  BIND_NOW flag.

* Support for the PowerPC SPE ISA extension (powerpc-*-*gnuspe*
  configurations) has been removed, following the deprecation of this
  subarchitecture in version 8 of GCC, and its removal in version 9.

* On 32-bit Arm, support for the port-based I/O emulation and the <sys/io.h>
  header have been removed.

* The Linux-specific <sys/sysctl.h> header and the sysctl function have been
  deprecated and will be removed from a future version of glibc.
  Application should directly access /proc instead.  For obtaining random
  bits, the getentropy function can be used.

Changes to build and runtime requirements:

* GCC 6.2 or later is required to build the GNU C Library.

  Older GCC versions and non-GNU compilers are still supported when
  compiling programs that use the GNU C Library.
